--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@nestjs/apollo": "^10.0.16",
@@ -28,15 +29,21 @@
     "@nestjs/graphql": "^10.0.16",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^8.0.2",
     "apollo-server-express": "^3.9.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
     "joi": "^17.6.0",
+    "mysql2": "^2.3.3",
     "nodemailer": "^6.7.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "ts-morph": "^15.1.0",
+    "typeorm": "^0.2.41",
+    "ulid": "^2.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
